--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -212,6 +212,17 @@ header {
       > * {
         margin-left: 2rem;
       }
+      .cart {
+        
+        a{
+          position: relative;
+
+          p{
+            position: absolute;
+            left: 20px;
+          }
+        }
+      }
     }
   }
 }
