--- a/src/components/product/productList/ProductList.module.scss
+++ b/src/components/product/productList/ProductList.module.scss
@@ -72,7 +72,9 @@
 
 .grid {
   display: flex;
+  align-items: center;
   justify-content: space-around;
+  min-height: 150px;
 
   flex-wrap: wrap;
   // padding: 1rem 0;
