--- a/src/components/product/productDetails/ProductDetails.module.scss
+++ b/src/components/product/productDetails/ProductDetails.module.scss
@@ -41,6 +41,16 @@
   }
 }
 
+.heading {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+
+  button{
+    margin-bottom: 10px;
+  }
+}
+
 @media screen and (max-width: 700px) {
   .product {
     .details {
