--- a/src/components/slider/Slider.css
+++ b/src/components/slider/Slider.css
@@ -21,9 +21,9 @@
 
 img {
   border-radius: 30px;
-  max-width: 100vw;
-  max-height: 100%;
-  object-fit: cover;
+  max-width: 70vw;
+  max-height: 80vh;
+  object-fit: contain;
   padding: 0 9px;
 }
 
