added flag size

--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -79,6 +79,10 @@
       align-items: flex-start;
       justify-content: center;
 
+      .flag {
+        width: 18px;
+      }
+
       p {
         color: white;
       }
